# Ghostpad

./: .gitignore  README.md  deploy_payload.bat  setup_wsl.bat  virtualDS5research.md
.commandcode/taste/: taste.md
.github/workflows/: build-client.yml  build-payloads.yml
Ghostpad-app/: compile.bat  launch.bat  package-lock.json
Ghostpad-app/electron/: beeper-client.js  beeper_server.elf  capture-window.js  console-store.js  ghostpad-client.js  main.js  payload-deploy.js  ssm-client.js
Ghostpad-app/react/src/: App.tsx
Ghostpad-app/react/src/configs/: controller.ts  firebase.ts  ghostpadApi.ts  macroSignals.ts  ps5Controller.test.ts  ps5Controller.ts
Ghostpad-app/react/src/hooks/: Provider.tsx  useAuth.ts  useEmulator.ts  useGamePad.ts  useGhostpadSettings.ts  useInputRedirect.ts  useNetwork.ts
Ghostpad-app/react/src/interfaces/: command.ts  context.ts  project.ts
Ghostpad-app/react/src/screens/Consoles/: index.tsx
Ghostpad-app/react/src/screens/InputRedirect/: index.tsx
Ghostpad-app/react/src/screens/Project/components/: CommandTable.tsx  GamePad.tsx  PadVisualizer.tsx  ProjectHeader.tsx  SideMenu.tsx  Viewer.tsx
Ghostpad-app/react/src/screens/Projects/: index.tsx
Ghostpad-app/react/src/screens/Settings/: index.tsx
Ghostpad-app/react/src/styles/: Colors.ts  Fonts.ts
Ghostpad-app/react/src/test/: App.test.js
Ghostpad-app/react/src/ui/parts/Input/: TextInput.tsx
Ghostpad-app/react/src/ui/systems/SideMenu/: Menu.tsx
Ghostpad-native/: CMakeLists.txt  ImGuiIOSKeyboardBridge.h  ImGuiIOSKeyboardBridge.mm  LICENSE  build_ios.sh  ghostpad-settings.json
Ghostpad-native/ps4/: .gitignore  Makefile  imgui_impl_ps4_sw.cpp  imgui_impl_ps4_sw.h  main_ps4.cpp  ps4_compat.h  ps4_egl.cpp  ps4_egl.h  stdatomic.h
Ghostpad-native/ps4/assets/: dualsense_solid_black_png.h  fa_solid_900_ttf.h  roboto_medium_ttf.h
Ghostpad-native/ps4/sce_module/: libSceFios2.prx  libc.prx
Ghostpad-native/ps4/stubs/: gamepad_console_stub.cpp  gl_stubs.h  glfw_console_stubs.cpp  glfw_console_stubs.h  imgui_console_stubs.cpp
Ghostpad-native/scripts/: embed_assets.py
Ghostpad-native/src/: ghostpad_platform.h  main.cpp
Ghostpad-native/src/input/: gamepad_input.cpp  gamepad_input.h  gamepad_input.mm  keyboard_input.cpp  keyboard_input.h  macro_engine.cpp  macro_engine.h
Ghostpad-native/src/network/: beeper_client.cpp  beeper_client.h  ghostpad_client.cpp  ghostpad_client.h  network_scanner.cpp  network_scanner.h  payload_deploy.cpp  payload_deploy.h  socket_util.h  ssm_client.cpp  ssm_client.h
Ghostpad-native/src/protocol/: gpad_packet.h
Ghostpad-native/src/storage/: console_store.cpp  console_store.h  profile_store.cpp  profile_store.h  project_store.cpp  project_store.h  settings_store.cpp  settings_store.h
Ghostpad-native/src/tests/: test_main.cpp
Ghostpad-native/src/ui/: app.cpp  app.h  beeper_screen.cpp  consoles_screen.cpp  controller_screen.cpp  credits_screen.cpp  file_picker.cpp  file_picker.h  file_picker_ios.mm  gif_export.cpp  gif_export.h  home_screen.cpp  input_redirect_screen.cpp  native_theme.h  pad_visualizer.cpp  projects_screen.cpp  settings_screen.cpp  systemstate_screen.cpp
Ghostpad-native/src/ui/ios/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard  ViewController.h  ViewController.mm
data/: controllers.json
deprecated/Ghostpad-app/: package.json  pnpm-lock.yaml
deprecated/Ghostpad-app/electron/: beeper-client.js  console-store.js  main.js  preload.js  settings-store.js  ssm-client.js  xinput-detect.js
deprecated/Ghostpad-app/react/: README.md  package-lock.json  package.json
deprecated/Ghostpad-app/react/patches/: react-gamepad+1.0.3.patch
deprecated/Ghostpad-app/react/public/: index.html  manifest.json
deprecated/Ghostpad-app/react/src/configs/: bundledProjects.ts  controller.ts  defaultNames.ts  ghostpadApi.ts  macroSignals.test.ts  offlineStorage.ts  ps5Controller.ts
deprecated/Ghostpad-app/react/src/hooks/: useDatabase.ts  useGamePad.ts  useGhostpadSettings.ts  useMedia.ts  useNetwork.ts
deprecated/Ghostpad-app/react/src/screens/Beeper/: index.tsx
deprecated/Ghostpad-app/react/src/screens/Capture/: index.tsx
deprecated/Ghostpad-app/react/src/screens/Consoles/: index.tsx
deprecated/Ghostpad-app/react/src/screens/Home/: index.tsx
deprecated/Ghostpad-app/react/src/screens/InputRedirect/: index.tsx
deprecated/Ghostpad-app/react/src/screens/Project/: index.tsx
deprecated/Ghostpad-app/react/src/screens/Project/components/: GamePad.tsx
deprecated/Ghostpad-app/react/src/screens/Project/hooks/: useSideMenu.ts
deprecated/Ghostpad-app/react/src/screens/SystemState/: index.tsx
deprecated/Ghostpad-app/react/src/styles/: Effects.ts  Initialize.ts
deprecated/Ghostpad-app/react/src/ui/parts/: ProjectThumbnail.tsx
deprecated/Ghostpad-app/react/src/ui/parts/GamePad/: NoConnection.tsx
deprecated/Ghostpad-app/react/src/ui/systems/: KeyVisual.tsx
deprecated/Ghostpad-app/react/src/utils/: resolveProjectImageUrl.ts
esp32-ghostpad/: .gitignore  CMakeLists.txt  README.md  partitions_esp32.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.old  sdkconfig.private.example
esp32-ghostpad/main/: CMakeLists.txt  Kconfig.projbuild  ble_hid_host.c  ble_hid_host.h  bt_bridge.c  bt_bridge.h  bt_controller.h  dns_redirect.c  dns_redirect.h  ghostpad_platform.c  hid_gamepad.c  hid_gamepad.h  idf_component.yml  klog_reader.c  klog_reader.h  main.c  web_gui.h  web_server.c  web_server.h  wifi_ap.c  wifi_ap.h
esp32-ghostpad/patch/: bt_controller_fix_all.patch
lib/sjson/: json_pal.h  sJson.c
payload/: Makefile  ghostpad.elf  main.c  shellui_pad.c  shellui_pad.h
scripts/: build_payload.sh  install_deps.sh  install_sdk.sh
src/: Makefile  main.c  test.json
src/controller/: controller.c  ctrl_manager.c  ctrl_registry.c  ds3.c  ds4.c  generic.c  klog.c  logitech.c  nintendo.c  xbox.c
src/controller/include/: controller.h  ctrl_manager.h  ctrl_registry.h
src/include/: controller.h  ctrl_manager.h  klog.h
tools/vda_probe/: Makefile  README.md  vda_probe.c
(+4 files in other folders)
